# src/main/java/com/monnos/api/starwars/service/PlanetService.java
@@ -2,35 +2,44 @@ package com.monnos.api.starwars.service;
 
 import com.monnos.api.starwars.dto.PlanetDto;
 import com.monnos.api.starwars.dto.converter.PlanetConverter;
+import com.monnos.api.starwars.exception.InstanceAlreadyExistsInDatabaseException;
 import com.monnos.api.starwars.exception.PlanetAlredyDeletedException;
 import com.monnos.api.starwars.exception.PlanetNotFoundException;
+import com.monnos.api.starwars.exception.StarWarsApiUnavailableException;
 import com.monnos.api.starwars.model.Planet;
 import com.monnos.api.starwars.repository.PlanetRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Scope;
 import org.springframework.stereotype.Service;
 
-import javax.management.InstanceAlreadyExistsException;
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.Optional;
-
+import java.util.*;
 @Service
 @Scope("singleton")
 public class PlanetService {
 
-    private static PlanetConverter  planetConverter = new PlanetConverter();
+    private static final PlanetConverter  planetConverter = new PlanetConverter();
+    private static final StarWarsApiConsumerService swapiConsumer = new StarWarsApiConsumerService();
+
+    @Autowired
     private static PlanetRepository planetRepository;
 
-    public Planet getPlanet(int id) {
+    public PlanetDto getPlanet(int id) {
         Optional<Planet> p = planetRepository.findById(id);
-        return p.orElseThrow(NoSuchElementException::new);
+        if(p.isPresent())
+            return planetConverter.convert(p.get());
+        throw new PlanetNotFoundException();
     }
 
     public void addPlanet(PlanetDto planetDto) {
         if(planetRepository.findById(planetDto.getId()).isPresent())
-            throw new InstanceAlreadyExistsException();
+            throw new InstanceAlreadyExistsInDatabaseException();
         Planet p = planetConverter.convert(planetDto);
-        // TODO: Consult SWAPI API to set number of Films
+
+        // sets Film Count fetched from Star Wars API
+        PlanetDto swapiPlanet = swapiConsumer.fetchPlanetById(p.getId());
+        if(swapiPlanet.getId()!=null && swapiPlanet.getId().equals(p.getId()))
+            p.setFilmCount(swapiPlanet.getFilmCount());
+
         p.setValid(true);
         planetRepository.save(p);
     }
@@ -45,8 +54,7 @@ public class PlanetService {
     }
 
     public List<PlanetDto> findPlanetByName(String name) {
-        List<Planet> planets = planetRepository.findByNameContaining();
-        // TODO: Consult SWAPI API to get the planet by name
+        List<Planet> planets = planetRepository.findByNameContaining(name);
         return planetConverter.convert(planets);
     }
 
@@ -54,9 +62,10 @@ public class PlanetService {
         return planetConverter.convert(planetRepository.findAll());
     }
 
-    public List<PlanetDto> findAllInSwapi() {
-        // TODO: Consult SWAPI API to get list of planets
-        return null;
+    public List<PlanetDto> findAllInStarWarsApi() {
+        List<PlanetDto> planets = swapiConsumer.fetchAllPlanets();
+        if(!planets.isEmpty())  return planets;
+        else throw new StarWarsApiUnavailableException();
     }
 
 }
